config: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ lerna-debug.log
 /playwright-report/
 /playwright/.cache/
 e2e/mrt-target/
+build/
+.cursor/
+cache-hash-config.json
 
 # GitHub Actions (Node.js) require built artifacts to be committed.
 # Runners do not run `npm install` for actions; `runs.main`/`runs.post` must point to files in `dist/`.
