feat: add .env to .gitignore to prevent sensitive data from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ e2e/mrt-target/
 build/
 .cursor/
 cache-hash-config.json
+.env
 
 # GitHub Actions (Node.js) require built artifacts to be committed.
 # Runners do not run `npm install` for actions; `runs.main`/`runs.post` must point to files in `dist/`.
